--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT="3000"
 KEY="hvdvay6ert72839289()aiyg8t87qt72393293883uhefiuh78ttq3ifi78272jbkj?[]]pou89ywe"
+MAIL_USERNAME="buchichowdary02@gmail.com"
+MAIL_PASSWORD="axqf zzdo qfwe ldjv"
